istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"istio-ingressgateway","install.operator.istio.io/owning-resource":"unknown","install.operator.istio.io/owning-resource-namespace":"istio-system","istio":"ingressgateway","istio.io/rev":"default","operator.istio.io/component":"IngressGateways","operator$
  creationTimestamp: "2021-03-10T09:27:53Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: istio-ingressgateway
    install.operator.istio.io/owning-resource: unknown
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: ingressgateway
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.9.1
    release: istio
  name: istio-ingressgateway
  namespace: istio-system
  resourceVersion: "6285"
  selfLink: /api/v1/namespaces/istio-system/services/istio-ingressgateway
  uid: ce55e085-f7bc-463b-87d1-dc9eb1242483
spec:
  clusterIP: 100.71.166.232
  externalTrafficPolicy: Cluster
  ports:
  - name: status-port
    nodePort: 32563
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 30862
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 31602
    port: 443
    protocol: TCP
    targetPort: 8443
  - name: tcp-istiod
    nodePort: 31277
    port: 15012
    protocol: TCP
    targetPort: 15012
  - name: tls
    nodePort: 30963
    port: 15443
    protocol: TCP
    targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: ace55e085f7bc463b87d1dc9eb124248-737537121.ap-east-1.elb.amazonaws.com
