jenkins.yaml
# original
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-original
  namespace: default
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
        version: original
    spec:
      containers:
        - name: jenkins
          image: 839928622/jenkins:latest
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: docker-sock-volume
              mountPath: "/var/run/docker.sock"
          imagePullPolicy: IfNotPresent
      volumes:
        # This allows jenkins to use the docker daemon on the host, for running builds
        # see https://stackoverflow.com/questions/27879713/is-it-ok-to-run-docker-from-inside-docker
        - name: docker-sock-volume
          hostPath:
            path: /var/run/docker.sock
        - name: jenkins-home
          hostPath:
            path: /mnt/jenkins-store
      serviceAccountName: jenkins
---
# experimental
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: jenkins-experimental
#   namespace: default
# spec:
#   selector:
#     matchLabels:
#       app: jenkins
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: jenkins
#         version: experimental
#     spec:
#       containers:
#         - name: jenkins
#           image: 839928622/jenkins:latest
#           env:
#             - name: JAVA_OPTS
#               value: -Djenkins.install.runSetupWizard=false
#           ports:
#             - name: http-port
#               containerPort: 8080
#             - name: jnlp-port
#               containerPort: 50000
#           volumeMounts:
#             - name: jenkins-home
#               mountPath: /var/jenkins_home
#             - name: docker-sock-volume
#               mountPath: "/var/run/docker.sock"
#           imagePullPolicy: IfNotPresent
#       volumes:
#         # This allows jenkins to use the docker daemon on the host, for running builds
#         # see https://stackoverflow.com/questions/27879713/is-it-ok-to-run-docker-from-inside-docker
#         - name: docker-sock-volume
#           hostPath:
#             path: /var/run/docker.sock
#         - name: jenkins-home
#           hostPath:
#             path: /mnt/jenkins-store
#       serviceAccountName: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http-ui
      port: 8080
      targetPort: 8080
    - name: http-jnlp
      port: 50000
  selector:
    app: jenkins
---
