default-ingress-gateway-config.yaml


---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
  namespace: default
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: webapp-http
      protocol: HTTP
    hosts:
    - "www.chatroom365.com"
    - "jenkins.chatroom365.com" 
    - "api.chatroom365.com"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - "www.chatroom365.com"
    - "jenkins.chatroom365.com" 
    - "api.chatroom365.com"


---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: web-app
  namespace: default
spec:
  # if you call a service in another namespace , then you need the fully qualified domain name.
  # like: <service-name>.<namespace-name>.svc.cluster.local
  hosts:      # which incoming host are we applying the proxy rules to???
    - "www.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
        - headers:
            Cookie:
              exact: release=canary
      route:
        - destination:
            host: web-app.default.svc.cluster.local
            subset: experimental
            port:
              number: 80
    - match:
        - headers:
            Cookie:
              exact: release=stable
      route:
        - destination:
            host: web-app.default.svc.cluster.local
            subset: original
            port:
              number: 80
    - route:
        - destination:
            host: web-app.default.svc.cluster.local
            subset: original
            port:
              number: 80
          weight: 80
          headers:
            response:
              add:
                "Set-Cookie": release=stable; Max-Age=2592000
        - destination:
            host: web-app.default.svc.cluster.local
            subset: experimental
            port:
              number: 80
          weight: 20
          headers:
            response:
              add:
                "Set-Cookie": release=canary; Max-Age=2592000  
  # http:
  #   - route:
  #       - destination:
  #           host: web-app.default.svc.cluster.local
  #           subset: original
  #         weight: 90
  #         headers:
  #           response:
  #             set:
  #               Strict-Transport-Security: max-age=31536000; includeSubDomains
  #       - destination:
  #           host: web-app.default.svc.cluster.local
  #           subset: experimental
  #         weight: 10
  #         headers:
  #           response:
  #             set:
  #               Strict-Transport-Security: max-age=31536000; includeSubDomains
---
#load balancing for k8s service:web-app
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: web-app
  namespace: default
spec:
  host: web-app.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: jenkins
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "jenkins.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: jenkins.default.svc.cluster.local
            port: 
              number: 8080
            subset: original
          weight: 100
          headers:
            response:
              set:
                Strict-Transport-Security: max-age=31536000; includeSubDomains
        - destination:
            host: jenkins.default.svc.cluster.local
            port: 
              number: 8080
            subset: experimental
          weight: 0
          headers:
            response:
              set:
                Strict-Transport-Security: max-age=31536000; includeSubDomains
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: jenkins
  namespace: default
spec:
  host: jenkins.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
---


kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: chat-api
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "api.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: chat-api.default.svc.cluster.local
            port: 
              number: 5000
            subset: original
          weight: 50
          headers:
            response:
              set:
                Strict-Transport-Security: max-age=31536000; includeSubDomains
        - destination:
            host: chat-api.default.svc.cluster.local
            port: 
              number: 5000 
            subset: experimental
          weight: 50
          headers:
            response:
              set:
                Strict-Transport-Security: max-age=31536000; includeSubDomains
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: chat-api
  namespace: default
spec:
  host: chat-api.default.svc.cluster.local
  trafficPolicy:
    outlierDetection: # Circuit Breakers HAVE TO BE SWITCHED ON
      # default 10% , that's meaning that if a circuit breaker needs to kick in, then it's going to remove 10% of pods from the load balancing.
      maxEjectionPercent: 50
      consecutive5xxErrors: 2
      # default 10s
      interval: 10s
      # default 30s format: 1h/1m/1s/1ms Must Be >=1ms
      baseEjectionTime: 30s
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
---

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: postgres-db
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*" 
  gateways:
    - ingress-gateway-configuration
  tcp:
  - match:
      - port: 5432
    route:
    - destination:
        host: postgres-db.default.svc.cluster.local
        port: 
          number: 5432
 #       subset: original
---
# kind: DestinationRule
# apiVersion: networking.istio.io/v1alpha3
# metadata:
#   name: postgres-db
#   namespace: default
# spec:
#   host: postgres-db.default.svc.cluster.local
#   subsets:
#     - labels:
#         version: original
#       name: original
