ingress-gateway-configuration.yaml

---
# Gateway for kiali
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-monitor-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.chatroom365.com"
    - "grafana.chatroom365.com"
    - "tracing.chatroom365.com"
---

# virtualService for kiali 
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "kiali.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - istio-monitor-gateway
  http:
    - route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
            subset: kialiapp
          weight: 100

---
# DestinationRule for kiali
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali.istio-system.svc.cluster.local
  subsets:
    - labels:
        app: kiali
      name: kialiapp

---
# virtualService for grafana 
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "grafana.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - istio-monitor-gateway
  http:
    - route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000


---
# virtualService for tracing 
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: tracing
  namespace: istio-system
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "tracing.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - istio-monitor-gateway
  http:
    - route:
        - destination:
            host: tracing.istio-system.svc.cluster.local
            port:
              number: 80


---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
  namespace: default
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: webapp-http
      protocol: HTTP
    hosts:
    - "www.chatroom365.com"
    - "jenkins.chatroom365.com" 
    - "api.chatroom365.com"
  - port:
      number: 5432
      name: postgres-tcp
      protocol: TCP
    hosts:
    - "*"


---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: web-app
  namespace: default
spec:
  # if you call a service in another namespace , then you need the fully qualified domain name.
  # like: <service-name>.<namespace-name>.svc.cluster.local
  hosts:      # which incoming host are we applying the proxy rules to???
    - "www.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: web-app.default.svc.cluster.local
            subset: original
          weight: 90
        - destination:
            host: web-app.default.svc.cluster.local
            subset: experimental
          weight: 10
---
#load balancing for k8s service:web-app
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: web-app
  namespace: default
spec:
  host: web-app.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: jenkins
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "jenkins.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: jenkins.default.svc.cluster.local
            subset: original
          weight: 100
        - destination:
            host: jenkins.default.svc.cluster.local
            subset: experimental
          weight: 0
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: jenkins
  namespace: default
spec:
  host: jenkins.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
---


kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: chat-api
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "api.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: chat-api.default.svc.cluster.local
            subset: original
          weight: 100
        - destination:
            host: chat-api.default.svc.cluster.local
            subset: experimental
          weight: 0
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: chat-api
  namespace: default
spec:
  host: chat-api.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
---

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: postgres-db
  namespace: default
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "*" 
  gateways:
    - ingress-gateway-configuration
  tcp:
  - match:
      - port: 5432
    route:
    - destination:
        host: postgres-db.default.svc.cluster.local
        port: 
          number: 5432
 #       subset: original
---
# kind: DestinationRule
# apiVersion: networking.istio.io/v1alpha3
# metadata:
#   name: postgres-db
#   namespace: default
# spec:
#   host: postgres-db.default.svc.cluster.local
#   subsets:
#     - labels:
#         version: original
#       name: original
