istio-system-ingress-gateway-config.yaml
---
# Gateway for kiali
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-monitor-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.chatroom365.com"
    - "grafana.chatroom365.com"
    - "tracing.chatroom365.com"
    tls:
      httpsRedirect: true
      # discussion on https: https://github.com/istio/istio/issues/8638 https://github.com/istio/istio/issues/6566
  - port:
      number: 443
      name: https
      protocol: HTTP
    hosts:
    - "kiali.chatroom365.com"
    - "grafana.chatroom365.com"
    - "tracing.chatroom365.com"
---

# virtualService for kiali 
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "kiali.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - istio-monitor-gateway
  http:
    - route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
            subset: kialiapp
          weight: 100

---
# DestinationRule for kiali
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali.istio-system.svc.cluster.local
  subsets:
    - labels:
        app: kiali
      name: kialiapp

---
# virtualService for grafana 
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: grafana
  namespace: istio-system
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "grafana.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - istio-monitor-gateway
  http:
    - route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 3000


---
# virtualService for tracing 
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: tracing
  namespace: istio-system
spec:
  hosts:      # which incoming host are we applying the proxy rules to???
    - "tracing.chatroom365.com" # Copy the value in the gateway hosts - usually a Domain Name
  gateways:
    - istio-monitor-gateway
  http:
    - route:
        - destination:
            host: tracing.istio-system.svc.cluster.local
            port:
              number: 80
